# ghaction

./: .gitignore  README.md  pyproject.toml
.github/workflows/: first-action.yml  first-action.yml.bak  output.yml
src/gh200/: banking.py
tests/: test_banking.py
