[tool.poetry]
name = "gh200"
version = "0.1.0"
description = "Python CI/CD project using GitHub Actions"
authors = ["Amit Kumar <amitk4413@gmail.com>"]
license = "MIT"

packages = [
    { include = "gh200", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.11"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"